redeployed. fixed input layout on mobile

--- a/src/components/form/Input.module.css
+++ b/src/components/form/Input.module.css
@@ -1,4 +1,5 @@
 .input {
+  width: 165px;
   color: rgb(235, 222, 222);
   background-color: transparent;
   text-shadow: 1px 2px 2px rgb(23, 23, 23);
@@ -15,6 +16,7 @@
 }
 
 .datepicker {
+  width: 165px;
   border-radius: 10px;
 }
 
